--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,10 @@ body {
   line-height: 1.4;
   font-size: 15px;
   font-family: "League Spartan", sans-serif;
+  background-image: url("../images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
+  background-position: top left, bottom left;
+  background-repeat: no-repeat;
+  background-size: 100%;
 }
 
 img {
@@ -19,13 +23,8 @@ img {
   width: 100%;
 }
 
-.review-proof {
-  background-repeat: no-repeat;
-  background-image: url("images/bg-pattern-top-mobile.svg"), url("../images/bg-pattern-bottom-mobile.svg");
-}
-
 .review-wrapper {
-  width: min(90%, 90rem);
+  width: min(90%, 65rem);
   margin-inline: auto;
 }
 
@@ -43,16 +42,20 @@ img {
 }
 
 .stars {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   padding: 1.75rem 0;
 }
 
 .star {
   background-color: hsl(300deg, 24%, 96%);
-  padding: 1.8rem;
-  margin-bottom: 1rem;
+  border-radius: 10px;
+  padding: 1.5rem;
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 0.5rem;
 }
 .star-img {
   background-repeat: space;
@@ -64,11 +67,11 @@ img {
   color: hsl(300deg, 43%, 22%);
   font-weight: 500;
   font-size: 1.1rem;
-  margin-bottom: 0;
+  margin: 0;
 }
 
 .cards {
-  padding-bottom: 3rem;
+  padding: 3rem;
 }
 
 .card-profile-img {
@@ -97,4 +100,58 @@ img {
   font-weight: 500;
   color: hsl(333deg, 80%, 67%);
   margin-top: 0;
+}
+
+@media (min-width: 810px) {
+  body {
+    background-image: url("../images/bg-pattern-top-desktop.svg"), url("../images/bg-pattern-bottom-desktop.svg");
+    background-position: top left, bottom;
+    background-repeat: no-repeat;
+    background-size: 50%, 85%;
+  }
+  .hero {
+    padding-bottom: 4rem;
+    text-align: left;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+  }
+  .hero-txt {
+    flex-basis: 35%;
+  }
+  .stars {
+    flex-basis: 60%;
+  }
+  .star {
+    padding: 1rem 2.5rem;
+    display: flex;
+    flex-direction: row;
+  }
+  .star-img {
+    -webkit-margin-end: 1.5rem;
+            margin-inline-end: 1.5rem;
+  }
+  .star-1 {
+    align-self: flex-start;
+  }
+  .star-2 {
+    align-self: center;
+  }
+  .star-3 {
+    align-self: flex-end;
+  }
+  .cards {
+    display: flex;
+    gap: 2rem;
+    padding-bottom: 5rem;
+  }
+  /*.card-1 {
+    transform: translateY(-1rem);
+  }*/
+  .card-2 {
+    transform: translateY(1rem);
+  }
+  .card-3 {
+    transform: translateY(2rem);
+  }
 }/*# sourceMappingURL=main.css.map */
